<resources>
    <string name="app_name">Order On</string>
    <string name="moto">One Place for all your needs</string>
    <string name="homeButton">Home</string>
    <string name="orderHistoryButton">Your Orders</string>
    <string name="cartButton">Cart</string>
    <string name="userButton">User</string>
    <string name="logo_desc">logo</string>
    <string name="groceries_home_title">Get your groceries</string>
    <string name="pharmacy_home_title">Healthcare supplies at ease</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>