<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="236dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orderon_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/moto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/moto"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/home_screen_scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.408" />

        <LinearLayout
            android:id="@+id/homeScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="595dp"
            android:background="@drawable/top_round_corner_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ScrollView
                android:id="@+id/home_screen_scroll"
                android:layout_width="400dp"
                android:layout_height="577dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:id="@+id/homeContentLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="595dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/foodTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Order Food"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/foodRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>

                    <TextView
                        android:id="@+id/foodTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/groceries_home_title"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/groceriesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>

                    <TextView
                        android:id="@+id/pharmacyTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/pharmacy_home_title"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pharmacyRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>


                </LinearLayout>
            </ScrollView>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="20dp"
    >
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu"
            android:background="@android:color/transparent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:labelVisibilityMode="labeled"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/storeTypeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_keyboard_arrow_up_24"
        app:maxImageSize="35dp"
        android:backgroundTint="@color/colorPrimaryAccent"
        app:backgroundTint="@color/colorPrimaryAccent"
        app:layout_anchor="@id/bottomAppBar"
        android:contentDescription="storeType" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
